--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    cache_type: file_system
 
 framework:
     #esi: ~
@@ -38,6 +39,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    number_format:
+        thousands_separator: ','
 
 # Doctrine Configuration
 doctrine:
@@ -68,3 +71,11 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+#Doctrine Cache Configuration
+doctrine_cache:
+    providers:
+        my_markdown_cache:
+            type: '%cache_type%'
+            file_system:
+              directory: /tmp/doctrine_cache
